--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
