--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ py-rust-stemmers = "^0.1.3"
 qdrant-client = "^1.12.0"
 tokenizers = ">=0.15,<1.0"
 ipdb = "^0.13.13"
-
+mmh3 = "^4.1.0"
 
 [tool.poetry.dev-dependencies]
 
